# AI_Analytics_Hackathon

solution3_ai_analytics/backend/: .env.example  pyproject.toml
solution3_ai_analytics/backend/app/: __init__.py  config.py  main.py  metadata.py  schemas.py
solution3_ai_analytics/backend/app/cache/: chat_02cf0d8a7ac3bed0.json  chat_22a5cd814a6e19d2.json  chat_46cc98d132417010.json  chat_6052536be3812b99.json  chat_6a5eb72db90d978a.json  chat_6b8e851330463d8b.json  chat_774239043227603a.json  chat_7c7db4299ac94d6f.json  chat_7d253dedb526350e.json  chat_8f1910e55ad22d23.json  chat_94380a1059132583.json  chat_b2454235a759fd74.json  chat_b963d2b1d3f64adc.json  chat_d2aec1f691ae203a.json  chat_da0d201160bc34f0.json  chat_dda8e6f27d18d94b.json  chat_df04d0a7e51b8b83.json  chat_e8f1be2ac3cc1f53.json  embed_2a5bee1b03126b09.json  embed_2c6ef1ae8623172e.json  embed_2cc5429ac25c52ae.json  embed_2d9f1724d63256b4.json  embed_613f5986fedeb28e.json  embed_b724742ec94a5ac1.json  embed_c3c7447acc8ad0ab.json  embed_e4464e3cbe8867da.json  embed_e801b1d8f64d762c.json
solution3_ai_analytics/backend/app/config_files/: columns.yaml  demo_questions.yaml  examples.yaml  tables.yaml
solution3_ai_analytics/backend/scripts/: check_azure.py  embed_metadata.py  generate_synthetic_db.py  precache.py
solution3_ai_analytics/backend/tests/: conftest.py  test_ast_validator.py  test_graceful_decline.py  test_locked_arc.py  test_overview_stats.py  test_presentation_fastpath.py  test_recording_reproducibility.py  test_tenant_isolation.py  test_trust_audit.py  test_wow_charts.py
(+64 files in other folders)
