[project]
name = "solution3-backend"
version = "0.1.0"
description = "Solution 3 — IQVIA AI Analytics backend (FastAPI + LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",          # SQLAlchemy `Vector` type for the embedding columns
    "langgraph>=0.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "openai>=1.40",           # Azure OpenAI client (LIVE mode only)
    "sqlglot>=25.0",          # declared now; SQL AST validation lands in Phase 2
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
